fixes z-index

--- a/components/filter2/index.styl
+++ b/components/filter2/index.styl
@@ -104,3 +104,6 @@ tab-padding = 15px 18px 10px 18px
 .filter-dropdown-count
   margin-left 10px
   color #777
+
+.filter-dropdown-text
+  text-transform capitalize
